# strotui

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  widgets.rs
src/widgets/: panel.rs  text.rs
src/widgets/snapshots/: strotui__widgets__panel__tests__simple_long_text_lines.snap  strotui__widgets__panel__tests__simple_text_lines.snap  strotui__widgets__text__tests__long_text.snap  strotui__widgets__text__tests__long_words_text.snap  strotui__widgets__text__tests__selected_text.snap  strotui__widgets__text__tests__text.snap  strotui__widgets__text__tests__words_with_truncate.snap  strotui__widgets__text__tests__words_with_truncate_and_ellipsis.snap
